--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
       integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p"
       crossorigin="anonymous"
     />
-    <link rel="stylesheet" href="/assets/css/style.css" />
+    <link rel="stylesheet" href="./assets/css/style.css" />
     <title>Artsy</title>
   </head>
 
@@ -49,7 +49,7 @@
       &#10084 Made with love.<a href="https://github.com/ggruiz7/artsy">See me on GitHub</a>
     </footer>
 
-    <script src="/assets/js/script.js"></script>
+    <script src="./assets/js/script.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/uikit@3.10.0/dist/js/uikit.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/uikit@3.10.0/dist/js/uikit-icons.min.js"></script>
   </body>
